# refal

./: .gitignore  .travis.yml  CMakeLists.txt  EBNF_refal.txt  LICENSE  Makefile  README.md  refal2_grammar.txt  refal2_line.txt  test.sh
include/: ArbitraryInteger.h  Assert.h  CharSet.h  Common.h  Compiler.h  Dictionary.h  DirectiveParser.h  EmbeddedFunctions.h  Errors.h  Executer.h  FastSet.h  FieldOfView.h  Function.h  FunctionBuilder.h  FunctionCompiler.h  Label.h  Lang.h  Lexem.h  LinkBuilder.h  Listener.h  Module.h  ModuleBuilder.h  NodeList.h  Operation.h  Operations.h  OperationsBuilder.h  OperationsExecuter.h  Parser.h  Program.h  Qualifier.h  QualifierBuilder.h  QualifierParser.h  Reader.h  Receptacle.h  Refal.h  Refal2.h  RuleParser.h  Scanner.h  SetBuilder.h  SmartPointers.h  (+4 more)
src/: ArbitraryInteger.cpp  CharSet.cpp  Common.cpp  Compiler.cpp  DirectiveParser.cpp  EmbeddedFunctions.cpp  Errors.cpp  Executer.cpp  FieldOfView.cpp  Function.cpp  FunctionBuilder.cpp  FunctionCompiler.cpp  Label.cpp  Lang.cpp  Lexem.cpp  LinkBuilder.cpp  Module.cpp  ModuleBuilder.cpp  OperationsBuilder.cpp  OperationsExecuter.cpp  Parser.cpp  Program.cpp  Qualifier.cpp  QualifierBuilder.cpp  QualifierParser.cpp  Reader.cpp  Receptacle.cpp  Refal.cpp  Refal2.cpp  RuleParser.cpp  Scanner.cpp  Token.cpp  Unit.cpp  Variables.cpp  main.cpp
tests/: Fibonacci.ref  PROGRAM.REF  arithmetic.ref  btest.ref  embedded.ref  files.ref  fishUnix.txt  matching.ref  moduleA.ref  moduleB.ref  moduleC.ref  pi.ref  print_test.ref  recognitionImpossible.ref  simple.ref  speed.ref  speedtest.ref
